--- a/config-repo/micro-order.properties
+++ b/config-repo/micro-order.properties
@@ -1,4 +1,4 @@
 spring.profiles.active=dev
 username=ouiwwwwwwwwjack-default
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/consult?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/consult?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
 redis.password=123456
